--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,7 @@ classifiers = [
     "Programming Language :: Python :: 3.9",
     "Programming Language :: Python :: 3.10",
     "Programming Language :: Python :: 3.11",
+    "Programming Language :: Python :: 3.12",
 ]
 urls = {Homepage = "https://niveapps.com/", Repository = "https://github.com/nive/nive_userdb"}
 dependencies = ["nive>=1.6.1", "AuthEncoding"]
